fixed spacing on plans

--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ h5{
     color: #6515ff;
     font-size: 28px;
     margin-bottom: 28px;
+    text-align: center;
 }
 .features__title{
     font-size: 56px;
@@ -232,8 +233,15 @@ h5{
     flex-direction: column;
     align-items: center;
     margin-right: 62px ;
+    text-align: center;
 
 
+}
+.qw__header--wrapper{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .designed__title{
     font-size: 48px;
@@ -416,16 +424,16 @@ width: 100%
 .plans {
     margin-top: 24px;
     display: flex;
+    justify-content: space-between;
    
     
 }
 .plan{
-   width: 500px;
+   width: 30%;
    display: flex;
    flex-direction: column; 
    align-items: center;
    border: 0.3px solid #7583956a;
-   margin-right:24px;
    border-radius: 16px;
    
    
@@ -761,6 +769,7 @@ justify-content: space-between;
     .img__wrapper__side--img{
         display: none;
     }
+    
     .qw__container--small{
         width: 100%;
         margin: 12px 62px;
